--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react-native": "^0.69.1",
     "react-native-heroicons": "^2.2.0",
     "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.7",
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
+    "babel-plugin-module-resolver": "^4.1.0",
     "tailwindcss": "^3.1.5"
   },
   "private": true
