--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@sanity/image-url": "^1.0.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
+    "react": "18.0.0",
     "react-dom": "17.0.2",
-    "react-native": "^0.69.1",
+    "react-native": "0.69.4",
     "react-native-heroicons": "^2.2.0",
     "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.7",
